enh: improve same-package visibility logic in JavaAnalyzer